--- a/src/main.css
+++ b/src/main.css
@@ -4,4 +4,13 @@
 
 body {
   background-color: #474b5b;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(
+    106deg,
+    rgba(81, 87, 111, 1) 0%,
+    rgba(60, 61, 69, 1) 100%
+  );
 }
